--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
         .navbar {
             margin-bottom: 20px;
         }
-        #editor { font-family: Monospace; font-size: 20px}
+        #editor { font-family: Courier New; font-weight: bold; font-size: 1.2em; white-space: pre; }
     </style>
 </head>
 <body>
