Set editor to have fixed width font

--- a/src/main/resources/templates/emulator.html
+++ b/src/main/resources/templates/emulator.html
@@ -16,7 +16,7 @@
             margin: 1em;
             padding: 1em;
         }
-        #editor { font-family: Courier New; font-weight: bold; font-size: 1.2em; white-space: pre; }
+        #text-editor { font-family: Courier New; font-weight: bold; font-size: 1.2em; white-space: pre; }
         #table-results { font-family: Courier New; font-weight: bold; font-size: 1.2em; white-space: pre; }
         .table-striped>tbody>tr:nth-child(odd)>td,
         .table-striped>tbody>tr:nth-child(odd)>th {
