--- a/src/main/resources/templates/emulator.html
+++ b/src/main/resources/templates/emulator.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col border border-secondary rounded">
                     <h6>Output</h6>
-                    <textarea class="form-control text-editor"  style="background-color:#eeeeee" readonly id="text-results" rows="20" name="sourcecode" th:text="${model.emulatorModel.results}"></textarea>
+                    <textarea class="form-control text-editor"  style="background-color:#eeeeee" readonly id="text-results" rows="20" name="sourcecode" th:text="${model.emulatorModel.output}"></textarea>
                 </div>
            </div>
         </div>
