Notes section added to the docs page

--- a/src/main/resources/templates/docs.html
+++ b/src/main/resources/templates/docs.html
@@ -136,6 +136,16 @@
             <td>Stop execution</td>
         </tr>
     </table>
+    <h4>Notes</h4>
+    <p>
+        This version of CESIL has the following differences to the original:
+    </p>
+    <ul>
+        <li>The maximum number of instructions that can be executed in a single run is 100. If this is exceeded an error will be returned.</li>
+        <li>Positive integers and zero do not need to be signed.</li>
+        <li>Labels are not limited to six characters.</li>
+        <li>Program header comments are not supported.</li>
+    </ul>
 </main>
 <script src="static/js/bootstrap.bundle.min.js"></script>
 </body>
