--- a/cesil-web/src/main/resources/templates/interpreter.html
+++ b/cesil-web/src/main/resources/templates/interpreter.html
@@ -30,7 +30,7 @@
         <span class="navbar-brand">CESIL (Computer Education In Schools Instruction Language)</span>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="/" id="menu-item-emulator">Emulator</a>
+                <a class="nav-link active" href="/" id="menu-item-interpreter">Interpreter</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/docs">Docs</a>
@@ -46,14 +46,14 @@
                     <h6>Source code</h6>
                     <form action="/" method="post" name="program">
                         <div class="mb-3">
-                            <textarea class="form-control text-editor" rows="20" id="text-editor" name="sourcecode" th:text="${emulator.sourceCode}"></textarea>
+                            <textarea class="form-control text-editor" rows="20" id="text-editor" name="sourcecode" th:text="${interpreter.sourceCode}"></textarea>
                         </div>
                         <button type="submit" id="button-run" class="btn btn-primary">&gt; RUN</button>
                     </form>
                 </div>
                 <div class="col border border-secondary rounded">
                     <h6>Output</h6>
-                    <textarea class="form-control text-editor"  style="background-color:#eeeeee" readonly id="text-results" rows="20" name="sourcecode" th:text="${emulator.output}"></textarea>
+                    <textarea class="form-control text-editor"  style="background-color:#eeeeee" readonly id="text-results" rows="20" name="sourcecode" th:text="${interpreter.output}"></textarea>
                 </div>
            </div>
         </div>
